--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -11,11 +11,11 @@
         android:layout_height="match_parent"
         tools:context=".presentation.fragments.MoviesFragment">
 
-        <!-- TODO: Update blank fragment layout -->
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment" />
+       <androidx.recyclerview.widget.RecyclerView
+           android:id="@+id/moviesRecyclerView"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           tools:listitem="@layout/movie_item_layout"/>
 
     </FrameLayout>
 </layout>
