--- a/app/src/main/res/layout/movie_item_layout.xml
+++ b/app/src/main/res/layout/movie_item_layout.xml
@@ -14,6 +14,9 @@
         <variable
             name="status"
             type="String" />
+        <variable
+            name="isDownloading"
+            type="Boolean" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
@@ -21,17 +24,21 @@
         android:layout_height="wrap_content"
         android:onClick="@{null}"
         app:cardCornerRadius="@dimen/_5sdp"
-        android:layout_margin="@dimen/_5sdp">
+        android:layout_margin="@dimen/_7sdp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/_5sdp">
+            android:background="@{isDownloading? @color/light_green : @color/white}"
+            android:paddingStart="@dimen/_5sdp"
+            android:paddingEnd="@dimen/_5sdp"
+            android:paddingTop="@dimen/_10sdp"
+            android:paddingBottom="@dimen/_10sdp">
 
-            <de.hdodenhof.circleimageview.CircleImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/itemImage"
-                android:layout_width="@dimen/_60sdp"
-                android:layout_height="@dimen/_60sdp"
+                android:layout_width="@dimen/_40sdp"
+                android:layout_height="@dimen/_40sdp"
                 tools:src="@tools:sample/avatars"
                 android:scaleType="centerCrop"
                 android:padding="@dimen/_3sdp"
@@ -40,14 +47,14 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/exo"
                 android:text="@{title}"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_14sdp"
+                android:textSize="@dimen/_12sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/downloadFileImage"
                 app:layout_constraintHorizontal_bias="0.06"
@@ -56,24 +63,24 @@
                 app:layout_constraintVertical_bias="0.3"
                 tools:text="@tools:sample/first_names" />
 
-            <ImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/downloadFileImage"
                 android:layout_width="@dimen/_35sdp"
                 android:layout_height="@dimen/_35sdp"
                 android:layout_marginEnd="@dimen/_5sdp"
                 android:layout_marginStart="@dimen/_5sdp"
                 android:padding="@dimen/_7sdp"
-                android:src="@drawable/ic_baseline_cloud_download_24"
+                android:src="@drawable/ic_baseline_save_alt_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/exo"
                 android:textColor="@android:color/darker_gray"
-                android:textSize="@dimen/_12sdp"
+                android:textSize="@dimen/_9sdp"
                 android:text="@{status}"
                 android:layout_marginEnd="@dimen/_10sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
