--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#E6E6E6</color>
+    <color name="blue">#446DD6</color>
+    <color name="light_green">#BAD8FFAC</color>
 </resources>
